Fix page header overlap for in-page anchors

--- a/themes/bootstrap/static/css/theme.css
+++ b/themes/bootstrap/static/css/theme.css
@@ -63,3 +63,10 @@ img {
   width: 100%;
   border-radius: 4px;
 }
+
+:target::before {
+  content: "";
+  display: block;
+  height: 60px; /* fixed header height*/
+  margin: -60px 0 0; /* negative fixed header height */
+}
